# daikin_test_april_2023

./: .gitignore  CMakeLists.txt  README.md  daikin.code-workspace
source/: CMakeLists.txt
source/thermo/: daikin_thermo.cpp  daikin_thermostat1.cpp  daikin_thermostat1.hpp
source/thermo/include/: daikin_thermo.hpp
tests/: CMakeLists.txt  daikin_test1.cpp
